--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<link rel="stylesheet" href="style.css">
-		<title>Code wars</title>
+	
+		<title>Calculator</title>
 </head>
 <body>
 	<section class="calculator">
@@ -44,6 +44,6 @@
 	</section>
 	
 
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
