--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 		<button>(</button>
 		<button>)</button>
 		<button>sqrt</button>
+		<button>ln</button>
+		<button>P</button>
 	</div>
 	<div>
 		<button class="del">Del</button>
