--- a/index.html
+++ b/index.html
@@ -5,43 +5,45 @@
 	</head>
 	<body>
 		<section class="calculator">
-		<div>
-				<input class="disp" placeholder="0" readonly><br>
-		</div>	
-		<div class="digits-and-operators">
-			<button>1</button>
-			<button>2</button>
-			<button>3</button>
-			<button>4</button>
-			<button>5</button>
-			<button>6</button>
-			<button>7</button>
-			<button>8</button>
-			<button>9</button>
-			<button>0</button>
-			<button>.</button>
-		</div>
-		<div class="digits-and-operators">
-			<button>+</button>
-			<button>-</button>
-			<button>*</button>
-			<button>/</button>
-			<button>%</button>
-			<button>(</button>
-			<button>)</button>
-		</div>
-		<div class = "special-operators">
-			<button class="sqroot">sqrt</button>
-			<button class="ln">ln</button>
-			<button class="exp">e</button>
-		</div>
-		<div>
-			<button class="del">Del</button>
-			<button class="reset">C</button>
-		</div>
-		<div class = 'result'>
-			<button>=</button>
-		</div>
+			<div>
+					<input class="disp" placeholder="0" readonly><br>
+			</div>
+			<div>Previous result:</div>	
+			<div class="prev-res"></div>
+			<div class="digits-and-operators">
+				<button>1</button>
+				<button>2</button>
+				<button>3</button>
+				<button>4</button>
+				<button>5</button>
+				<button>6</button>
+				<button>7</button>
+				<button>8</button>
+				<button>9</button>
+				<button>0</button>
+				<button>.</button>
+			</div>
+			<div class="digits-and-operators">
+				<button>+</button>
+				<button>-</button>
+				<button>*</button>
+				<button>/</button>
+				<button>%</button>
+				<button>(</button>
+				<button>)</button>
+			</div>
+			<div class = "special-operators">
+				<button class="sqroot">sqrt</button>
+				<button class="ln">ln</button>
+				<button class="exp">e</button>
+			</div>
+			<div>
+				<button class="del">Del</button>
+				<button class="reset">C</button>
+			</div>
+			<div class = 'result'>
+				<button>=</button>
+			</div>
 		</section>
 				
 		<script type="text/javascript" src="js/index.js"></script>
